# ruma

./: .env  .gitignore  .lintstagedrc.js  Anchor.toml  RUMAvSJiaaEZF6f32ALcPYWghEQhQbcvjRm5ehT86hp.json  bun.lockb  package.json  rust-toolchain.toml  tsconfig.json  txtx.yml
.github/workflows/: build-and-test.yaml
app/: .env.example  eslint.config.mjs  next.config.ts  package.json
app/src/: middleware.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: DatePicker.tsx  DateTimePicker.tsx  EventList.tsx  EventTabsContent.tsx  Header.tsx  ImageInput.tsx  ImageInputLabel.tsx  LoadingOverlay.tsx  PastEventsSheet.tsx  Providers.tsx  SmallRoundedImage.tsx  Spinner.tsx  StatusBadge.tsx  TimePicker.tsx  TransactionToast.tsx  (+1 more)
bruno/: bruno.json
bruno/events/: fetch events.bru
bruno/tickets/: fetch tickets.bru
bruno/users/: fetch users.bru
programs/ruma/: Cargo.toml
programs/ruma/src/: bitflag.rs  bitmask.rs  constants.rs  error.rs  lib.rs
programs/ruma/src/instructions/: check_in.rs  check_into_event.rs  create_event.rs  create_ticket.rs  create_user.rs  mod.rs  register_for_event.rs  update_attendee.rs  update_ticket.rs
programs/ruma/src/state/: attendee.rs  event.rs  mod.rs  ticket.rs  user.rs
runbooks/: README.md
runbooks/deployment/: main.tx  signers.localnet.tx
tests/: accounts.ts  constants.ts  pda.ts  setup.ts  surfpool.ts
tests/functional/: checkIn.test.ts  checkIntoEvent.test.ts  createEvent.test.ts  createTicket.test.ts  createUser.test.ts  registerForEvent.test.ts  updateAttendee.test.ts  updateTicket.test.ts
(+34 files in other folders)
